# Meridian_AI_Personal_Assistant

./: .gitignore  BUILD.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: build.yml
scripts/: build-all.sh  create-icons.ps1  download-ollama.ps1  download-ollama.sh  ensure-ollama.mjs  generate-icons.mjs  setup-windows.ps1  setup.sh
src/: App.tsx
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/ai/: mod.rs  ollama.rs  summarizer.rs
src-tauri/src/commands/: ai.rs  integration.rs  mod.rs  settings.rs  summary.rs  tasks.rs  window.rs
src-tauri/src/integrations/: gchat.rs  gmail.rs  jira.rs  manager.rs  mod.rs  outlook.rs  plugin.rs  slack.rs  zoom.rs
src-tauri/src/notifications/: dispatcher.rs
src-tauri/src/storage/: database.rs  encryption.rs  keychain.rs  mod.rs
src-tauri/src/tasks/: manager.rs  mod.rs  reminder.rs
src/components/dashboard/: DailySummaryCard.tsx  DashboardPage.tsx  GreetingHeader.tsx  MeetingWidget.tsx  PriorityItemCard.tsx  TaskWidget.tsx
src/components/history/: HistoryPage.tsx
src/components/onboarding/: OnboardingPage.tsx
src/components/overlay/: EmailAssistant.tsx  OverlayWindow.tsx  QuickCapture.tsx
src/components/settings/: IntegrationCard.tsx  ScanSettings.tsx  SettingsPage.tsx
src/components/shared/: LoadingScreen.tsx  PriorityBadge.tsx  Sidebar.tsx
src/components/tasks/: TaskEditor.tsx  TasksPage.tsx
src/lib/: tauri.ts  types.ts  utils.ts
src/store/: settingsStore.ts  summaryStore.ts  taskStore.ts  uiStore.ts
src/styles/: globals.css
