[package]
name = "meridian"
version = "1.0.0"
description = "Meridian — AI-powered personal productivity assistant"
authors = ["Meridian Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77"

[lib]
name = "meridian_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri            = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-notification    = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell           = "2"
tauri-plugin-os              = "2"

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client — uses rustls (no OpenSSL dependency)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }

# Async stream utilities (used by Ollama model-pull streaming)
futures-util = { version = "0.3", default-features = false, features = ["std"] }

# Database — bundled SQLite (no system SQLite needed)
rusqlite = { version = "0.31", features = ["bundled"] }

# OS keychain — Windows Credential Manager / macOS Keychain
keyring = "2"

# Encryption — AES-256-GCM (no OpenSSL)
aes-gcm = { version = "0.10", features = ["std"] }
sha2    = "0.10"
hmac    = "0.12"
hkdf    = "0.12"
rand    = "0.8"
zeroize = { version = "1", features = ["derive"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Identifiers
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
thiserror = "1"
anyhow    = "1"

# Encoding
base64 = "0.22"
hex    = "0.4"
url    = "2"

# OAuth2 PKCE
oauth2 = "4"

# Open URLs in system browser
open = "5"

# Lightweight HTTP server for OAuth redirect (localhost)
tiny_http = "0.12"

# Async trait support
async-trait = "0.1"

# Logging
log         = "0.4"
env_logger  = "0.11"

# Scheduling
tokio-cron-scheduler = "0.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic   = "abort"
codegen-units = 1
lto     = true
opt-level = "s"
strip   = true
